Grid visibility  button fix and finishing touches

--- a/styles.css
+++ b/styles.css
@@ -4,20 +4,30 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
 }
 
-
-.header {
+header {
     font-size: 48px;
     font-weight: bold;
     color: rgb(255, 68, 0);
-    margin-bottom: 64px;
-    margin-top: 32px;
+    margin-bottom: 32px;
+    margin-top: 24px;
+    width: 100vh;
+    text-align: center;
+}
+
+footer {
+    font-size: 24x;
+        font-weight: bold;
+        color: rgb(255, 68, 0);
+        margin-bottom: 32px;
+        margin-top: 32px;
 }
 
 .container {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap:wrap;
     height: 640px;
     width: 640px;
     gap: 0;
@@ -31,6 +41,7 @@ body {
     border-style: solid;
     padding: 0 0 0 0;
     margin: -1px -1px -1px -1px;
+    flex: 1 1 auto;
     border-width: 1px;
     user-select: none;
 }
